# python-data-protection-example

./: .env.example  .gitignore  LICENSE  README.md  doppler.yaml.example  pyproject.toml
secrets/: secrets.example
src/data_protection/: __init__.py  classification.py  main.py
src/data_protection/api/: __init__.py  app.py  constants.py  dependencies.py  main.py
src/data_protection/api/routes/: __init__.py  persons.py
src/data_protection/logging/: __init__.py  safe.py  setup.py
src/data_protection/models/: __init__.py  config.py  person.py
src/data_protection/redaction/: __init__.py  age_band.py  engine.py  erase.py  masked.py  null.py  secret_hmac.py
src/data_protection/repositories/: __init__.py  person_repository.py
tests/: conftest.py  test_api.py  test_logging.py  test_models.py  test_redactors.py  test_repository.py
